efk/p-p-ekf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: efk-ingress
  namespace: logging
  annotations:
## Untuk menaikan batas upload file 
    nginx.org/client-max-body-size: "10m"
## Memaksa jalan di https
 # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
## Service Location n Characters
    - host: efk.domain.id
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
